- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    6.7.0
- 
    None
- 
        
- 
        a44410fa8 (dev), b2dbd40fd (6.8), bed30bdc5 (6.7), e6e1993df (tqtc/lts-6.5)
- 
        Multimedia wk 19-20, Multimedia wk 21-22, Multimedia wk 23-24
MacOS 14.4
Qt Creator 13.0.0
Qt 6.7.0
Steps to reproduce:
- Open any camera example (widgets or QML camera)
- Record a video with connected FHD webcam (USB).
- Play the video.
Expected: The video shows what has been recorded.
Actual: The video shows a green flashing nose - it looks like corrupted (See attached) and the following logs start to continuously appear in the console:
qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080 [swscaler @ 0x7fb330048000] bad src image pointers qt.multimedia.ffmpeg.videoencoder: Scaled height -22 != 1080
Reproducibility:  100% 
 
- relates to
- 
                     QTQAINFRA-6225
        Qt Test Attack - Q2, 2024 QTQAINFRA-6225
        Qt Test Attack - Q2, 2024-           
- Open
 
-         
| For Gerrit Dashboard: QTBUG-124725 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 564575,4 | Avfcamera: Fix comparison error when adding camera formats | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 566563,2 | Avfcamera: Fix comparison error when adding camera formats | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 566696,3 | Avfcamera: Fix comparison error when adding camera formats | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 567216,2 | Avfcamera: Fix comparison error when adding camera formats | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 | 
