Avfcamera: Fix comparison error when adding camera formats

A comparison between float and double prevented Qt from adding camera
formats for certain cameras, due to small differences between the
values. This change fixes that by adding/subtracting 0.001 to hide the
fuzziness.

Pick-to: 6.5
Task-number: QTBUG-124725
Change-Id: I87d05b57e60667fef1569a5087d3d88897798de8
(cherry picked from commit b2dbd40fdf2286746d2d006d9030afdf5a640acc)
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>